fixed p ul and navbar alignments

--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@ body {
 }
 
 .nav-container {
+  max-width: 1310px;
+  margin: 0 auto;
   background-color: #d35749;
   height: 67px;
   color: #fff;
@@ -76,9 +78,9 @@ a {
   background-repeat: no-repeat;
   background-position: center;
   width: 100%;
-  height: 400px;
+  height: 450px;
   background-size: cover;
-  padding: 10% 0;
+  padding: 75px 0;
 }
 
 #keyword,
@@ -173,12 +175,12 @@ a {
 
 .footer-links {
   display: flex;
-  justify-content: space-around;
+  flex-wrap: wrap;
   font-size: 10px;
 }
 
 .footer-links li {
-  padding: 5px 10px;
+  padding: 4px 5px;
   align-self: center;
 }
 
@@ -242,6 +244,10 @@ a {
     margin: auto 0;
     width: 50%;
   }
+
+  .footer-links {
+    justify-content: space-between;
+  }
 }
 
 @media (max-width: 767px) {
@@ -273,5 +279,12 @@ a {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 20px 150px;
+  }
+}
+
+@media (min-width: 530px) {
+  .footer-links {
+    flex-wrap: unset;
+    justify-content: space-between;
   }
 }
